--- a/index.html
+++ b/index.html
@@ -1,49 +1,267 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="./styles/styles.css">
-    <!-- Add Aleo Font (default header/serif) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aleo&display=swap" rel="stylesheet">
     <title>Queue</title>
-  </head>
-  <body class="h-100">
-    <div class="vh-100 landing">
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-            <div class="container-fluid">
-                <div class="col">
-                    <a class="navbar-brand" href="#">Queue</a>
-                </div>
-                <div class="col collapse navbar-collapse" id="navbarID">
-                    <div class="navbar-nav mx-auto">
-                        <a class="nav-link active" aria-current="page" href="#">Download</a>
-                        <a class="nav-link active" aria-current="page" href="#">About Us</a>
-                        <a class="nav-link active" aria-current="page" href="#">Contact</a>
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+        <div class="container">
+          <a href="#" class="navbar-brand">Queue.</a>
+  
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id=nav-menu>
+                <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a href="#learn" class="nav-link">How It Works</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#questions" class="nav-link">Questions</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#instructors" class="nav-link">Meet the Team</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <section class="bg-dark text-light p-5 text-center text-sm-start">
+      <div class="containers">
+        <div class="d-sm-flex align-items-center justify-content-between">
+            <div>
+                <h1>TUNES FOR EVERYONE</h1>
+                <p class="lead my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio minus magni iusto cum optio dicta, beatae deleniti aliquam saepe maxime tenetur cupiditate illo, officia non mollitia expedita voluptatum maiores praesentium!</p>
+                <button class="btn-primary btn-lg">Pass the Aux!</button>
+            </div>
+            <img
+                class="img-fluid w-50 d-none d-sm-block"
+                src="./assets/music.svg"
+                alt=""
+            />
+        </div>
+      </div>
+    </section>
+
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3"><i class="bi bi-people"></i></div>
+                            <h3 class="card-title">Scan</h3>
+                            <p class="card-text">Scan a a QR code at the event to join the Queue! This lets you request and like songs while ensuring only people in attendance can edit the queue.</p>
+                            <a href="#" class="btn-dark">Read more</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col" style="text-align: right;" id="navbarID">
-                    <a class="nav-link active" aria-current="page" href="#">Get Started</a>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3"><i class="bi bi-laptop"></i></div>
+                            <h3 class="card-title">Queue</h3>
+                            <p class="card-text">Want to hear a song? Request to hear it from your phone!</p>
+                            <a href="#" class="btn-dark">Read more</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <div class="container-fluid d-flex h-100 big-section">
-            <div class="col-md-8 my-auto primary-text">
-              <h1>TUNES FOR EVERYONE</h1>
-              <p class="lead">Queue provides one centralized platform for crowdsourcing music at any event or venue from clubs and bars to gyms or coffee shops.</p>
-              <a href=""><img src="./assets/auxbutton.png" alt="Get Started!"></a>
-            </div>
-            <div class="col-md-4 my-auto">
-                <img src="./assets/phone.png" alt="Queue App" class="rounded mx-auto d-block">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3"><i class="bi bi-person-square"></i></div>
+                            <h3 class="card-title">Like</h3>
+                            <p class="card-text">See a song on the queue you like? Drop a like to make to push it higher and increase the chances of it being played.</p>
+                            <a href="#" class="btn-dark">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="p-5" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="./assets/how-it-works.svg" alt="">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Queue for Businesses</h2>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non cupiditate tempora, doloremque dolorum error consectetur?</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate atque recusandae dolorum corrupti eum praesentium doloremque quos aspernatur vero cumque laboriosam a deleniti cum, quis maiores nemo laudantium enim ipsa!</p>
+                    <a href="" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="p-5 bg-dark text-light" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md p-5">
+                    <h2>Learn the Fundamentals</h2>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non cupiditate tempora, doloremque dolorum error consectetur?</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate atque recusandae dolorum corrupti eum praesentium doloremque quos aspernatur vero cumque laboriosam a deleniti cum, quis maiores nemo laudantium enim ipsa!</p>
+                    <a href="" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Read More
+                    </a>
+                </div>
+                <div class="col-md">
+                    <img src="./assets/how-it-works.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="p-5" id="questions">
+        <div class="container">
+            <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+            <div class="accordion accordion-flush" id="questions">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                      Question 1
+                    </button>
+                  </h2>
+                  <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                        Question 2
+                      </button>
+                    </h2>
+                    <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                        Question 3
+                      </button>
+                    </h2>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="instructors" class="p-5 bg-primary">
+        <div class="container">
+          <h2 class="text-center text-white">Meet The Team</h2>
+          <p class="lead text-center text-white mb-5">
+            Our team consists of four freshmen at Princeton University
+          </p>
+          <div class="row g-4">
+            <div class="col-md-6 col-lg-3">
+              <div class="card bg-light">
+                <div class="card-body text-center">
+                  <img
+                    src="./assets/aidan.png"
+                    height="128px"
+                    class="mb-3"
+                    alt=""
+                  />
+                  <h3 class="card-title mb-3">Aidan Phillips</h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  </p>
+                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-md-6 col-lg-3">
+              <div class="card bg-light">
+                <div class="card-body text-center">
+                  <img
+                    src="./assets/wilbert.png"
+                    height="128px"
+                    class="mb-3"
+                    alt=""
+                  />
+                  <h3 class="card-title mb-3">Wilbert Joseph</h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  </p>
+                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-md-6 col-lg-3">
+              <div class="card bg-light">
+                <div class="card-body text-center">
+                  <img
+                    src="./assets/jason.jpeg"
+                    height="128px"
+                    class="rounded-circle mb-3"
+                    alt=""
+                  />
+                  <h3 class="card-title mb-3">Jason Ding</h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  </p>
+                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+              <div class="card bg-light">
+                <div class="card-body text-center">
+                  <img
+                    src="./assets/jason.jpeg"
+                    height="128px"
+                    class="rounded-circle mb-3"
+                    alt=""
+                  />
+                  <h3 class="card-title mb-3">Jason Ding</h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  </p>
+                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
