--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
           <a href="#" class="navbar-brand">Queue.</a>
   
@@ -35,19 +35,15 @@
         </div>
       </nav>
 
-      <section class="bg-dark text-light p-5 text-center text-sm-start">
-      <div class="containers">
+      <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+      <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
             <div>
                 <h1>TUNES FOR EVERYONE</h1>
                 <p class="lead my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio minus magni iusto cum optio dicta, beatae deleniti aliquam saepe maxime tenetur cupiditate illo, officia non mollitia expedita voluptatum maiores praesentium!</p>
                 <button class="btn-primary btn-lg">Pass the Aux!</button>
             </div>
-            <img
-                class="img-fluid w-50 d-none d-sm-block"
-                src="./assets/music.svg"
-                alt=""
-            />
+            <img class="img-fluid w-50 d-none d-sm-block" src="./assets/music.svg" alt=""/>
         </div>
       </div>
     </section>
@@ -94,7 +90,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
-                    <img src="./assets/how-it-works.svg" alt="">
+                    <img class="img-fluid" src="./assets/business.svg" alt="">
                 </div>
                 <div class="col-md p-5">
                     <h2>Queue for Businesses</h2>
@@ -112,7 +108,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
-                    <h2>Learn the Fundamentals</h2>
+                    <h2>Queue for Individuals</h2>
                     <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non cupiditate tempora, doloremque dolorum error consectetur?</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate atque recusandae dolorum corrupti eum praesentium doloremque quos aspernatur vero cumque laboriosam a deleniti cum, quis maiores nemo laudantium enim ipsa!</p>
                     <a href="" class="btn btn-light mt-3">
@@ -120,7 +116,7 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <img src="./assets/how-it-works.svg" alt="">
+                    <img class="img-fluid" src="./assets/friends.svg" alt="">
                 </div>
             </div>
         </div>
@@ -168,7 +164,7 @@
         <div class="container">
           <h2 class="text-center text-white">Meet The Team</h2>
           <p class="lead text-center text-white mb-5">
-            Our team consists of four freshmen at Princeton University
+            Our team consists of four freshmen at Princeton University who just want to hear good music when we go out.
           </p>
           <div class="row g-4">
             <div class="col-md-6 col-lg-3">
@@ -181,28 +177,6 @@
                     alt=""
                   />
                   <h3 class="card-title mb-3">Aidan Phillips</h3>
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
-                  </p>
-                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-md-6 col-lg-3">
-              <div class="card bg-light">
-                <div class="card-body text-center">
-                  <img
-                    src="./assets/wilbert.png"
-                    height="128px"
-                    class="mb-3"
-                    alt=""
-                  />
-                  <h3 class="card-title mb-3">Wilbert Joseph</h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -241,12 +215,34 @@
               <div class="card bg-light">
                 <div class="card-body text-center">
                   <img
-                    src="./assets/jason.jpeg"
+                    src="./assets/wilbert.png"
+                    height="128px"
+                    class="mb-3"
+                    alt=""
+                  />
+                  <h3 class="card-title mb-3">Wilbert Joseph</h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  </p>
+                  <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                  <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+              <div class="card bg-light">
+                <div class="card-body text-center">
+                  <img
+                    src="./assets/kyle.jpg"
                     height="128px"
                     class="rounded-circle mb-3"
                     alt=""
                   />
-                  <h3 class="card-title mb-3">Jason Ding</h3>
+                  <h3 class="card-title mb-3">Kyle Tsai</h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
