Fill in information

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="d-sm-flex align-items-center justify-content-between">
             <div>
                 <h1>TUNES FOR EVERYONE</h1>
-                <p class="lead my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio minus magni iusto cum optio dicta, beatae deleniti aliquam saepe maxime tenetur cupiditate illo, officia non mollitia expedita voluptatum maiores praesentium!</p>
+                <p class="lead my-4">Queue strives to enhance the music listening experience when in groups.  Queue will be a platform for crowdsourcing music at any event or venue from eating clubs and bars to gyms or coffee shops to small friend gatherings.</p>
                 <button class="btn-primary btn-lg">Pass the Aux!</button>
             </div>
             <img class="img-fluid w-50 d-none d-sm-block" src="./assets/music.svg" alt=""/>
@@ -94,10 +94,10 @@
                 </div>
                 <div class="col-md p-5">
                     <h2>Queue for Businesses</h2>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non cupiditate tempora, doloremque dolorum error consectetur?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate atque recusandae dolorum corrupti eum praesentium doloremque quos aspernatur vero cumque laboriosam a deleniti cum, quis maiores nemo laudantium enim ipsa!</p>
+                    <p class="lead">Use the power of the Queue to increase patron engagement and create an environment that represents your customer base. Sign up for Queue and never have to worry about background music again.</p>
+                    <p>Queue Autopilot allows your business to take song requests directly from patrons. Queue will filter based on genre and a custom mood-determining algorithm to ensure the music fits the theme of your business. Queue also has the ability to disallow explicit songs if desired.</p>
                     <a href="" class="btn btn-light mt-3">
-                        <i class="bi bi-chevron-right"></i> Read More
+                        <i class="bi bi-chevron-right"></i> Learn More
                     </a>
                 </div>
             </div>
@@ -109,10 +109,10 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
                     <h2>Queue for Individuals</h2>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non cupiditate tempora, doloremque dolorum error consectetur?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate atque recusandae dolorum corrupti eum praesentium doloremque quos aspernatur vero cumque laboriosam a deleniti cum, quis maiores nemo laudantium enim ipsa!</p>
+                    <p class="lead">Forget about having to unlock you phone constantly so your friend can add more Kanye or no-looking your password while driving to appease the Swifties.</p>
+                    <p>Queue lets your friends add songs to your Spotify or Apple Music queue from their own devices. Not sure what to add? Queue can reccommend songs based on your liked songs and mood. The Queue app also lets you request songs anywhere Queue is supported.</p>
                     <a href="" class="btn btn-light mt-3">
-                        <i class="bi bi-chevron-right"></i> Read More
+                        <i class="bi bi-chevron-right"></i> Get Started
                     </a>
                 </div>
                 <div class="col-md">
@@ -129,21 +129,21 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
-                      Question 1
+                      When will Queue be released?
                     </button>
                   </h2>
                   <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
-                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                    <div class="accordion-body">Queue is scheduled for a beta release in third quarter of 2022. We anticipate a full release in early 2023. Check back occasionally for updates.</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
-                        Question 2
+                        How much does Queue cost?
                       </button>
                     </h2>
                     <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
-                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                      <div class="accordion-body">Queue will be free for all individuals! Due to the inherent cost of servers and maintenance Queue for Business will unfortunately come at a minimal cost.</div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -178,8 +178,9 @@
                   />
                   <h3 class="card-title mb-3">Aidan Phillips</h3>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                    <b>Major:</b> Computer Science<br>
+                    <b>Top Artists:</b> Kanye West and Taylor Swift<br>
+                    <b>Hometown:</b> Milwaukee, WI
                   </p>
                   <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                   <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -200,8 +201,9 @@
                   />
                   <h3 class="card-title mb-3">Jason Ding</h3>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                    <b>Major:</b> Operations Research and Financial Engineering<br>
+                    <b>Top Artist:</b> Kanye West and Bruno Mars<br>
+                    <b>Hometown:</b> Mountain Lakes, NJ
                   </p>
                   <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                   <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -222,8 +224,9 @@
                   />
                   <h3 class="card-title mb-3">Wilbert Joseph</h3>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                    <b>Major:</b> Computer Science<br>
+                    <b>Top Artists:</b> J Cole and Tame Impala<br>
+                    <b>Hometown:</b> , NJ
                   </p>
                   <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                   <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -244,8 +247,9 @@
                   />
                   <h3 class="card-title mb-3">Kyle Tsai</h3>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                    <b>Major:</b> Computer Science (Premed)<br>
+                    <b>Top Artists:</b> Lauv and Blackpink<br>
+                    <b>Hometown:</b> Houston, TX<br>
                   </p>
                   <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                   <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
