update wilbert hometown

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   <p class="card-text">
                     <b>Major:</b> Computer Science<br>
                     <b>Top Artists:</b> J Cole and Tame Impala<br>
-                    <b>Hometown:</b> , NJ
+                    <b>Hometown:</b> River Vale, NJ
                   </p>
                   <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                   <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
