--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="icon" href="./assets/QueueBoxLogoDarkTheme.png">
     <title>Queue</title>
 </head>
 <body>
@@ -149,11 +150,11 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
-                        Question 3
+                        How does Queue access my Spotify?
                       </button>
                     </h2>
                     <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
-                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto odit accusamus quas alias excepturi voluptatem nihil aliquam consequatur laudantium! Numquam voluptatibus velit minima veritatis sint ex magni eos adipisci corporis!</div>
+                      <div class="accordion-body">Queue makes requests through Spotify's secure API which is public and available for commercial use.</div>
                     </div>
                 </div>
             </div>
