--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="icon" href="./assets/QueueBoxLogoDarkTheme.png">
     <title>Queue</title>
@@ -55,7 +55,7 @@
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
-                            <div class="h1 mb-3"><i class="bi bi-people"></i></div>
+                            <div class="h1 mb-3"><i class="bi bi-qr-code-scan"></i></div>
                             <h3 class="card-title">Scan</h3>
                             <p class="card-text">Scan a a QR code at the event to join the Queue! This lets you request and like songs while ensuring only people in attendance can edit the queue.</p>
                             <a href="#" class="btn-dark">Read more</a>
@@ -65,7 +65,7 @@
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
-                            <div class="h1 mb-3"><i class="bi bi-laptop"></i></div>
+                            <div class="h1 mb-3"><i class="bi bi-music-note-list"></i></div>
                             <h3 class="card-title">Queue</h3>
                             <p class="card-text">Want to hear a song? Request to hear it from your phone!</p>
                             <a href="#" class="btn-dark">Read more</a>
@@ -75,7 +75,7 @@
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
-                            <div class="h1 mb-3"><i class="bi bi-person-square"></i></div>
+                            <div class="h1 mb-3"><i class="bi bi-heart"></i></div>
                             <h3 class="card-title">Like</h3>
                             <p class="card-text">See a song on the queue you like? Drop a like to make to push it higher and increase the chances of it being played.</p>
                             <a href="#" class="btn-dark">Read more</a>
