--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="card-body text-center">
                             <div class="h1 mb-3"><i class="bi bi-heart"></i></div>
                             <h3 class="card-title">Like</h3>
-                            <p class="card-text">See a song on the queue you like? Drop a like to make to push it higher and increase the chances of it being played.</p>
+                            <p class="card-text">See a song on the queue you like? Drop a like to push it higher and increase the chances of it being played.</p>
                             <a href="#" class="btn-dark">Read more</a>
                         </div>
                     </div>
